# ci-test

./: .CMakeLists.txt.kate-swp  CMakeLists.txt  main.cpp
.github/workflows/: linux_release.yml  windows_release.yml
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
test/: CMakeLists.txt
